--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.7",
     "@shadcn/ui": "^0.0.4",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5"
   },
